Designer\Details: partially fixed bad layout of question panel for mozilla only (was broken in mozilla only) KP-2752
--HG--
branch : integer-real-questions


Former-commit-id: efcdba78a6f2d82a3dedd9322191d72a99f68926

--- a/src/UI/Designer/WB.UI.Designer/Content/details.css
+++ b/src/UI/Designer/WB.UI.Designer/Content/details.css
@@ -157,6 +157,12 @@ body.loading .loading-backdrop {
             overflow: auto;
     }
 
+    @-moz-document url-prefix() {
+        .stack .body .container-fluid {
+            position: relative;
+        }
+    }
+
     .stack .pane-bottom {
         -webkit-border-radius: 0 0 5px 5px;
         -moz-border-radius: 0 0 5px 5px;
